--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -15,6 +15,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/cli": "^0.22.18",
+    "@expo/config": "^10.0.10",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "^0.19.11",
+    "@expo/metro-runtime": "^4.0.1",
+    "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -48,5 +54,12 @@
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck":{ 
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
