import statement useSearchParams is getting an error but using its function on a variable works for whatever reason

--- a/Transit_APP/tsconfig.json
+++ b/Transit_APP/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "typeRoots": ["node_modules/@types", "node_modules"],
+    "types": ["expo-router"]
+  },
   "extends": "expo/tsconfig.base",
   "include": [
     "**/*.ts",
