--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.8.4",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
@@ -37,6 +38,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "express": "^5.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -51,6 +53,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-navigation-stack": "^2.10.4",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
