Alert works also perfectly. Issue is when im typing in vscode, specifically comments it appears

--- a/Transit_APP/.gitignore
+++ b/Transit_APP/.gitignore
@@ -37,9 +37,13 @@ yarn-error.*
 
 app-example
 
-# textfiles
+# textfiles and folders
 Useful_Info.txt
 
-server.js
+Server.js
 
 Text.txt
+
+Backend
+
+Notes
