--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -26,6 +26,8 @@
     "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
@@ -40,6 +42,7 @@
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
     "nativewind": "^4.1.23",
+    "puppeteer": "^24.6.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
