Tweets have been sent to liveFeed page container, 2 servers are set up now, one is static for testing purposes. code for it place in a txt file

--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -28,6 +28,7 @@
     "apify-client": "^2.12.2",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
