--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
@@ -43,6 +44,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
+    "gtfs-realtime-bindings": "^1.1.1",
     "nativewind": "^4.1.23",
     "puppeteer": "^24.6.1",
     "react": "18.3.1",
@@ -59,7 +61,8 @@
     "react-native-webview": "13.12.5",
     "react-navigation-stack": "^2.10.4",
     "rss-parser": "^3.13.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
