--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -45,6 +45,7 @@
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
     "gtfs-realtime-bindings": "^1.1.1",
+    "lru-cache": "^11.1.0",
     "nativewind": "^4.1.23",
     "puppeteer": "^24.6.1",
     "react": "18.3.1",
