--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -47,6 +47,7 @@
     "gtfs-realtime-bindings": "^1.1.1",
     "lru-cache": "^11.1.0",
     "nativewind": "^4.1.23",
+    "node-cron": "^4.0.0",
     "puppeteer": "^24.6.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
