--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -37,11 +37,11 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "^4.0.19",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "^4.0.21",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "^4.0.9",
     "expo-web-browser": "~14.0.2",
     "express": "^5.1.0",
     "gtfs-realtime-bindings": "^1.1.1",
@@ -51,7 +51,7 @@
     "puppeteer": "^24.6.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "^6.5.1",
     "react-native-reanimated": "~3.16.1",
@@ -69,7 +69,6 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@types/jest": "^29.5.12",
-    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "babel-preset-expo": "^12.0.9",
     "jest": "^29.2.1",
