Backend directory ands the files it contains

--- a/Transit_APP/.gitignore
+++ b/Transit_APP/.gitignore
@@ -47,11 +47,18 @@ Text.txt
 
 #Backend
 rssNote.txt
-TweetFetch.json
 SubwayTweets
-Backend
 Server.js
-Server2.js
+GTFS_Static_Feed.js
+busRawDat.txt
+ParseUndefinedTime.js
+ServerTEXT.txt
+testCode.js
+transitDB.js
+Database
+Notes
+
+
 
 
 #Notes
