--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -63,6 +63,7 @@
     "react-native-webview": "13.12.5",
     "react-navigation-stack": "^2.10.4",
     "rss-parser": "^3.13.0",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^3.4.17",
     "unzipper": "^0.12.3"
   },
