--- a/Transit_APP/package.json
+++ b/Transit_APP/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -39,6 +39,7 @@
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.21",
     "expo-splash-screen": "^0.29.24",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "^4.0.9",
@@ -52,6 +53,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "^6.5.1",
     "react-native-reanimated": "~3.16.1",
